syntax = "proto3";

option csharp_namespace = "MS.CoachSystem.GrpcServer";

package coachsystem;

service CoachSystem {
    rpc GetCoachAnalytics (AnalyticsRequest) returns (AnalyticsResponse);
}

message AnalyticsRequest {
    string coachId = 1;
    string startDate = 2;
    string endDate = 3;
}

message AnalyticsResponse {
    int32 user_task_count = 1;
    int32 goal_count = 2;
    int32 coaching_resource_count = 3;
    int32 coaching_session_count = 4;
    int32 coach_student_count = 5;
}